Refactored some code and added the ability to manually sort the table as well as toggle live scoring.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 </head>
 <body>
 <div class="container-fluid">
-
-    <div id="scoreTable" class="table-responsive-lg">
+    <h1>TBI Trivia Night</h1>
+    <div class="mb-2">
+        <button id="liveSort" class="btn btn-success">Turn Live Sorting is Off</button>
+        <button id="manSortAndScore" class="btn btn-primary">Manual Score and Sort</button>
+    </div>
+    <div id="scoreTable" class="table-responsive">
 
     </div>
 
