--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="container-fluid">
     <h1>TBI Trivia Night</h1>
     <div class="mb-2">
-        <button id="liveSort" class="btn btn-success">Turn Live Sorting is Off</button>
+        <button id="liveSort" class="btn btn-success">Turn Live Sorting Off</button>
         <button id="manSortAndScore" class="btn btn-primary">Manual Score and Sort</button>
     </div>
     <div id="scoreTable" class="table-responsive">
@@ -50,6 +50,10 @@
                             <label for="round-numbers" class="col-form-label">Number of Rounds:</label>
                             <input type="number"  required step="1" min="1" max="25" value="10"  class="form-control"  id="round-numbers" />
                         </div>
+                        <div class="form-group">
+                            <input type="checkbox" id="quickSetup" value="1">
+                            <label for="quickSetup" class="col-form-label">Check for Quick Setup</label>
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -69,7 +73,7 @@
             <form id="initsetup2frm">
                 <div class="form-group">
                     <label for="team-name" class="col-form-label">Enter Name for Team Number <span id="initsetup2teamnumber"></span></label>
-                    <input type="text" required minlength="6" maxlength="255" value="" class="form-control" id="team-name">
+                    <input type="text" required minlength="6" maxlength="255" value="" class="form-control" name="team-name" id="team-name">
                 </div>
             </form>
         </div>
